--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -50,8 +50,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/cardView"
+                style="@style/Widget.MaterialComponents.CardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -89,19 +90,22 @@
                         android:text="@string/title"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="@+id/guideline"
+                        app:layout_constraintStart_toEndOf="@+id/poster_movie"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/title_movie"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:maxLines="2"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif"
                         android:textSize="14sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="@+id/guideline"
+                        app:layout_constraintStart_toEndOf="@+id/poster_movie"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/title_tv" />
 
                     <androidx.appcompat.widget.AppCompatTextView
@@ -114,19 +118,21 @@
                         android:text="@string/rating"
                         android:textSize="14sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="@+id/guideline"
+                        app:layout_constraintStart_toEndOf="@+id/poster_movie"
                         app:layout_constraintTop_toBottomOf="@+id/title_movie" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/rating_movie"
-                        android:layout_width="55dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif"
                         android:textSize="24sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="@+id/guideline"
+                        app:layout_constraintHorizontal_bias="0"
+                        app:layout_constraintStart_toEndOf="@+id/poster_movie"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/rating_tv" />
 
                     <androidx.appcompat.widget.AppCompatTextView
@@ -139,7 +145,7 @@
                         android:text="@string/release_date"
                         android:textSize="14sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="@+id/guideline"
+                        app:layout_constraintStart_toEndOf="@+id/poster_movie"
                         app:layout_constraintTop_toBottomOf="@+id/rating_movie" />
 
                     <androidx.appcompat.widget.AppCompatTextView
@@ -151,22 +157,16 @@
                         android:fontFamily="sans-serif"
                         android:textSize="14sp"
                         android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="@+id/guideline"
-                        app:layout_constraintTop_toBottomOf="@+id/release_tv" />
-
-                    <androidx.constraintlayout.widget.Guideline
-                        android:id="@+id/guideline"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        app:layout_constraintGuide_begin="162dp" />
+                        app:layout_constraintHorizontal_bias="0"
+                        app:layout_constraintStart_toEndOf="@+id/poster_movie"
+                        app:layout_constraintTop_toBottomOf="@+id/release_tv"
+                        app:layout_constraintEnd_toEndOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.card.MaterialCardView>
 
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/cvOverview"
+                style="@style/Widget.MaterialComponents.CardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -209,7 +209,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/overview"
                         app:layout_constraintVertical_bias="1.0" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
